Add test for matching Bacteria (domain & genus) with suprageneric_name rank